Just add a quote

--- a/predicaments/Views on human nature.html
+++ b/predicaments/Views on human nature.html
@@ -8,7 +8,14 @@
 			<p>We keep studying human nature in systems that keep causing its corruption.</p>
 <p>Most of the time that we blame human nature we should be blaming system dynamics which create conditions for human nature to adapt in a certain way. </p>
 <p>Human nature can be many things. It can be unnecessarily violent and cruel and also peaceful and kind. <strong>Human nature is what we make it into</strong>.</p>
-	<p><strong>Connections:</strong></p><ul>
+	<blockquote><p>
+Shell of man, forgotten human form<br>
+Shell of man, your dream died today<br>
+Shell of man forgotten<br>
+Shell of man, living on borrowed time
+</p>
+<cite>Rosetta, "Au Pays Natal" from The Galilean Satellites</cite></blockquote>
+<p><strong>Connections:</strong></p><ul>
 <li><a data-href="Avoiding radical options" href="../Avoiding radical options.html">Avoiding radical options</a></li>
 <li><a data-href="Addiction" href="../Addiction.html">Addiction</a></li>
 <li><a data-href="Apathy" href="../Apathy.html">Apathy</a></li>
