Add foot binding

--- a/predicaments/List of possibilities.html
+++ b/predicaments/List of possibilities.html
@@ -205,4 +205,6 @@
 <li>Mind training</li>
 <li>Small is beautiful</li>
 <li>Non-doing</li>
+<li>Bricolage</li>
+<li>Soulmaking Dharma Lattice</li>
 </ol></body></html>
