Links for deforestation

--- a/predicaments/Deforestation.html
+++ b/predicaments/Deforestation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html><head>
+<!DOCTYPE html> <html>
 		<title>Deforestation</title>
 		
 <head>
@@ -8,39 +8,46 @@
 <h2>Deforestation</h2>
 <p><strong>Deforestation is the removal and destruction of forests</strong>. <a href="https://ourworldindata.org/deforestation">The UN FAO estimate that 10 million hectares of forest are cut down each year.</a> Two points of importance: one is that there is a difference between deforestation and net forest loss since forests are also regrowing and being replanted, second is that deforestation peaked in the 1980s. It is, however, also important to note that not all forests are equal and here we run into the potential issue with relying too heavily on quantification. We could most likely make most of the planet net positive in forest growth quite quickly by planting trees faster than we&#39;re removing them. The question is if we have a reason to trust our claimed understanding of the differences between artificially planted forests and naturally growing ones. Maybe we do? Do we truly understand what a forest is or are we missing it for all the trees?</p>
 <blockquote>
-	<p>There was a time when man* would walk in my woods, but now he has a mind of metal and wheels. He no longer cares for growing things.</p>
+	<p>There was a time when man* would walk in my woods, but now he has a mind of metal and wheels. He no longer cares for growing things. <br>
+		---<br>
+		I am not altogether on anybody’s side, because nobody is altogether on my side, if you understand me: nobody cares for the woods as I care for them, not even Elves nowadays.
+	</p>
 <cite>Treebeard (J.R.R. Tolkien), The Lord of the Rings, * modified quote</cite>
 </blockquote>
 </blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Profit" href="../Profit.html">Profit</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Resources" href="../Resources.html">Resources</a></li>
-<li><a data-href="Material extraction" href="../Material extraction.html">Material extraction</a></li>
-<li><a data-href="Quantification" href="../Quantification.html">Quantification</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Greenwashing" href="../Greenwashing.html">Greenwashing</a></li>
-<li><a data-href="Wisdom crisis" href="../Wisdom crisis.html">Wisdom crisis</a></li>
-<li><a data-href="Lack of humility" href="../Lack of humility.html">Lack of humility</a></li>
-<li><a data-href="Carelessness" href="../Carelessness.html">Carelessness</a></li>
-<li><a data-href="Ignoring diversity" href="../Ignoring diversity.html">Ignoring diversity</a></li>
-<li><a data-href="Ignorance of ongoing collapse" href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></li>
-<li><a data-href="Lack of the longterm" href="../Lack of the longterm.html">Lack of the longterm</a></li>
-<li><a data-href="The minimisation of all things wild" href="../The minimisation of all things wild.html">The minimisation of all things wild</a></li>
-<li><a data-href="Lack of a living world view" href="../Lack of a living world view.html">Lack of a living world view</a></li>
-<li><a data-href="The desacration of all places" href="../The desacration of all places.html">The desacration of all places</a></li>
-<li><a data-href="Ignorance of everything being sacred" href="../Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></li>
-<li><a data-href="Delusional domination of nature" href="../Delusional domination of nature.html">Delusional domination of nature</a></li>
-<li><a data-href="Ignorance of interconnectedness" href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
-<li><a data-href="Illusion of understanding" href="../Illusion of understanding.html">Illusion of understanding</a></li>
-<li><a data-href="Immoral justifications" href="../Immoral justifications.html">Immoral justifications</a></li>
-<li><a data-href="No respect for indigenous wisdom" href="../No respect for indigenous wisdom.html">No respect for indigenous wisdom</a></li>
-<li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
-<li><a data-href="Greed" href="../Greed.html">Greed</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - Without the power of old forests to halt the collapse of ecosystems the destruction will only happen faster...</li>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - Much deforestation occurs for the purpose of growing food where a forest once stood, yet surely we've got something wrong here? Replacing a forest with corn fields might be a short term win when it comes to the access to food but a long term disaster.</li>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - Forests store water and there is a clear <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ab738e">recursive connection between deforestation and droughts</a> and <a href="https://www.jstor.org/stable/20208569?mag=deforestation-lead-drought&seq=1">detrimental consequences beyond certain tipping points</a>.</li>
+	<li><strong><a href="../Agriculture.html"></a>Agriculture</strong> - Deforestation is a part of modern agricultural practice.</li>
+	<li><strong><a href="../Ancient sunlight, old sunlight, current sunlight.html"></a>Ancient sunlight, old sunlight, current sunlight</strong> - Deforestation is the shutting out of old sunlight.</li>
+	<li><strong><a href="../Apathy.html"></a>Apathy</strong> - Care about the forests? What forests?</li>
+	<li><strong><a href="../Biodiversity loss.html"></a>Biodiversity loss</strong> - Remove forests and you remove all species living in and off those forests.</li>
+	<li><strong><a href="../Climate change.html"></a>Climate change</strong> - Forests are the lungs of the world, without them there is only exhalation of carbon, no inhalation or circulation.</li>
+	<li><strong><a href="../Complexity mismatch.html"></a>Complexity mismatch</strong> - Old-growth forests harbour immensely complex ecosystems. Reduce this complexity and invite disaster.</li>
+	<li><strong><a href="../Desertification.html"></a>Desertification</strong> - Through soil erosion, droughts, and other cascade effects there are clear <a href="https://www.britannica.com/science/desertification/Rain-fed-croplands">links between deforestation and desertification</a>, both locally and globally.</li>
+	<li><strong><a href="../Ecological crisis.html"></a>Ecological crisis</strong> - No forests, nowhere to live.</li>
+	<li><strong><a href="../Extreme weather.html"></a>Extreme weather</strong> - Deforestation destabilises all natural systems, including the weather.</li>
+	<li><strong><a href="../Failure to take responsibility.html"></a>Failure to take responsibility</strong> - Replanting is not enough. How does one take responsibility for silencing the oldest voices on Earth? Fuck you, <a href="https://en.wikipedia.org/wiki/Prometheus_(tree)">Donald R. Currey</a>.</li>
+	<li><strong><a href="../Ignored externalities.html"></a>Ignored externalities</strong> - Deforestation has an endless amount of potentially catastrophic externalities that are largely unaccounted for.</li>
+	<li><strong><a href="../Immoral justifications.html"></a>Immoral justifications</strong> - Believe it or not but no one is truly forcing us to cut down forests.</li>
+	<li><strong><a href="../Lack of a living world view.html"></a>Lack of a living world view</strong> - If the world is no longer alive, forests simply consisting of mute grids of planted firs, then that's that, innit?</li>
+	<li><strong><a href="../Lack of balance.html"></a>Lack of balance</strong> - There is an intricate balance in nature and we should've been more careful of ruining it.</li>
+	<li><strong><a href="../Lack of dark spaces.html"></a>Lack of dark spaces</strong> - No shade left to hide away from the scorching sunlight.</li>
+	<li><strong><a href="../Lack of resilient systems.html"></a>Lack of resilient systems</strong> - Old forests are complex and resilient, young forests or clear-cut areas are not.</li>
+	<li><strong><a href="../Lack of time.html"></a>Lack of time</strong> - What can we do when the Amazon is lost? Is it too late?</li>
+	<li><strong><a href="../Limits to growth.html"></a>Limits to growth</strong> - How does our wealth keep growing when the forests are gone? What kind of fucking question is that?</li>
+	<li><strong><a href="../Loss of insect biomass.html"></a>Loss of insect biomass</strong> - <a href="https://worldrainforests.com/amazon/insects.html">Over 90%</a> of the species of the Amazon forest are insects.</li>
+	<li><strong><a href="../Migration.html"></a>Migration</strong> - Deforestation forces people to leave their homes, willingly or unwillingly.</li>
+	<li><strong><a href="../Missing elders.html"></a>Missing elders</strong> - <a href="https://en.wikipedia.org/wiki/Old_Tjikko">Old Tjikko</a>'s roots were formed when humans started cultivating grains in the Fertile Crescent.</li>
+	<li><strong><a href="../Mistreatment of animals.html"></a>Mistreatment of animals</strong> - Burning someone's house down could probably count as mistreatment.</li>
+	<li><strong><a href="../Mistreatment of humans.html"></a>Mistreatment of humans</strong> - Same as above, I suppose. Oh, and the global tipping points and total extinction and all that jazz.</li>
+	<li><strong><a href="../Monocultures (agriculture).html"></a>Monocultures (agriculture)</strong> - You can barely begin to compare the complexity of an old-growth forest to the dead homogeneity of modern industrial farmland.</li>
+	<li><strong><a href="../Net negative caloric extraction.html"></a>Net negative caloric extraction</strong> - Cutting down ancient forests to plant soy beans that we feed to cattle that we then eat. Yikes. Homo morus.</li>
+	<li><strong><a href="../Planetary boundaries.html"></a>Planetary boundaries</strong> - Deforestation affects most and potentially all of our planetary boundaries.</li>
+	<li><strong><a href="../Resource conflicts.html"></a>Resource conflicts</strong> - When resources such as wood become scarce, conflicts become inevitable.</li>
+	<li><strong><a href="../Sameness.html"></a>Sameness</strong> - Rapidly growing firs in neat rows, mossless ground, is this why we rush to develop VR?</li>
+	<li><strong><a href="../Soil erosion.html"></a>Soil erosion</strong> - <a href="https://www.nature.com/articles/s43017-020-0091-5">Deforestation leads to degrading soil properties</a>.</li>
+	<li><strong><a href="../The desacration of all places.html"></a>The desacration of all places</strong> - Few places are as densely packed with the spirits of life-force as old forests.</li>
+	<li><strong><a href="../The minimisation of all things wild.html"></a>The minimisation of all things wild</strong> - Not all places should be tamed.</li>
+	<li><strong><a href="../Tipping points.html"></a>Tipping points</strong> - We might have reached irreversible tipping points with regards to the Earth's forests through or deforestation practices.</li>
+</ul></head></html>
