--- a/predicaments/Desertification.html
+++ b/predicaments/Desertification.html
@@ -8,23 +8,19 @@
 		<p><a href="https://en.wikipedia.org/wiki/Desertification">Desertification is a type of land degradation whereby fertile areas become arid</a>. This typically results from deforestation, drought, or inappropriate agricultural practices. </p>
 <p>Comparing a <a href="https://en.wikipedia.org/wiki/Desertification#/media/File:Desertification_map.png">map of global desertification vulnerability</a> with a <a href="https://ourworldindata.org/explorers/countries-in-conflict-data?facet=none&amp;Measure=Conflict+deaths&amp;Conflict+type=All+armed+conflicts&amp;Conflict+sub-type=Across+all+sub-types&amp;country=AFG~ETH~SYR~UKR">map of armed conflicts</a> hints at something. What?</p>
 		<p><strong>Connections:</strong></p><ul>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Biodiversity loss" href="../Biodiversity loss.html">Biodiversity loss</a></li>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Soil erosion" href="../Soil erosion.html">Soil erosion</a></li>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Planetary boundaries" href="../Planetary boundaries.html">Planetary boundaries</a></li>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Material extraction" href="../Material extraction.html">Material extraction</a></li>
-<li><a data-href="Illusion of understanding" href="../Illusion of understanding.html">Illusion of understanding</a></li>
-<li><a data-href="Illusion of competence" href="../Illusion of competence.html">Illusion of competence</a></li>
-<li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
-<li><a data-href="Resource conflicts" href="../Resource conflicts.html">Resource conflicts</a></li>
-<li><a data-href="War" href="../War.html">War</a></li>
-<li><a data-href="Access to food" href="../Access to food.html">Access to food</a></li>
-<li><a data-href="Access to water" href="../Access to water.html">Access to water</a></li>
+			<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - The forming of deserts in previously arable land unfortunately accelerates the very factors that cause the desertification in the first place.</li>
+			<li><strong><a href="../Access to food.html">Access to food</a></strong> - If I ask you to, in your mind's eye, picture the Middle East, what do you see? Most Syrian refugees in Europe are fleeing from conflict with complicated and complex causes, from an expanding desert that was once called the Fertile Crescent of the Earth.</li>
+			<li><strong><a href="../Access to water.html">Access to water</a></strong> - A drier climate drives desertification and desertification drives a drier climate.</li>
+			<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - As with many things, there's nothing inherently wrong with deserts and even desertification is a natural process supporting certain species that thrive in such conditions. It becomes something problematic when considered in its totality and with its anthropogenic causes. Alright, think of it this way... During an ongoing sixth extinction it isn't great that deserts, which support a much lower biodiversity than forests, are expanding rapidly due to human activities.</li>
+			<li><strong><a href="../Climate change.html">Climate change</a></strong> - Many factors here but the most obvious is that deserts barely sequester any CO2 at all compared to forest land. Deserts are hot and contribute in making the world hotter.</li>
+			<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Deserts are less fertile and complex ecosystems and barely help in the increased resilience needed for an ecosystem that supports human life.</li>
+			<li><strong><a href="../Lack of a living world view.html">Lack of a living world view</a></strong> - If the Earth becomes an arid plain of desert pavement there won't be much heft to the argument of the world being animate and alive.</li>
+			<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - When the sand dunes come leaking in through your front door it becomes increasingly difficult to justify staying when you see what appears to be fertile greenery on the horizon.</li>
+			<li><strong><a href="../Migration.html">Migration</a></strong> - On a smaller but also more general scale than mass climate migration, it is usually economically beneficial to move from a desert to a more prosperous region, especially when deserts are expanding.</li>
+			<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - Firstly, when deserts expand certain natural resources become less available. Secondly, some natural resources suddenly such as oil suddenly become more extractable and chaos ensues. Local resource conflicts might escalate over the few patches of remaining greenery while nuclear powers fight over the black gold flowing in the veins of fertile death.</li>
+			<li><strong><a href="../Soil erosion.html">Soil erosion</a></strong> - There is a recursive relationship between soil erosion and desertification where they both cause and expand each other.</li>
+			<li><strong><a href="../Unheeded warnings.html">Unheeded warnings</a></strong> - Desertification is nothing new and we've known about many of its causes and consequences for thousands of years.</li>
+			<li><strong><a href="../War.html">War</a></strong> - I'll let the UN summarise things, "Desertification is a silent, invisible crisis that is destabilizing communities on a global scale. As the effects of climate change undermine livelihoods, inter-ethnic clashes are breaking out within and across states and fragile states are turning to militarization to control the situation. The effects of desertification are increasingly felt globally as victims turn into refugees, internally displaced people and forced migrants or they turn to radicalization, extremism or resource-driven wars for survival. If we are to restore peace, security and international stability in a context where changing weather events are threatening the livelihoods of more and more people, survival options are declining and state capacities are overburdened, then more should be done to combat desertification, reverse land degradation and mitigate the effects of drought. Otherwise, many small-scale farmers and poor, land-dependent communities face two choices: fight or flight."</li>
 </ul>
-<h2></h2>
+</body>
+</html>
