Add update text

--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -5,6 +5,8 @@
         </head>
 <title>Updates</title>
 <h2>Updates</h2>
+<h3>2024-09-10</h3>
+<p>Have added link motivations to some of the predicaments in the Ecological Metacrisis part of the landscape. Have almost finished illustrating that part of the map as well, just have to digitise it and figure out how to make it clickable and functional.</p>
 <h3>2024-08-26</h3>
 <p>Drawing has started and I'm currently sketching out predicaments with pencil and ink. Fun!</p>
 <h3>2024-08-22</h3>
