Motivate insect loss

--- a/predicaments/Deforestation.html
+++ b/predicaments/Deforestation.html
@@ -50,7 +50,8 @@
 	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - Few places are as densely packed with the spirits of life-force as old forests.</li>
 	<li><strong><a href="../The minimisation of all things wild.html">The minimisation of all things wild</a></strong> - Not all places should be tamed.</li>
 	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - We might have reached irreversible tipping points with regards to the Earth's forests through or deforestation practices.</li>
-<br>
-<br>
+	<br>
+	<br>
+	<br>
 
-</ul></head></html>
+</ul></html>
