--- a/predicaments/Desertification.html
+++ b/predicaments/Desertification.html
@@ -5,7 +5,7 @@
 <base target="_top">
 		</head>
 		<h2>Desertification</h2>
-		<p><a href="https://en.wikipedia.org/wiki/Desertification">Desertification is a type of land degradation whereby fertile areas become arid</a>. This typically results from deforestation, drought, or inappropriate agricultural practices. </p>
+		<p><strong><a href="https://en.wikipedia.org/wiki/Desertification">Desertification is a type of land degradation whereby fertile areas become arid</a></strong>. This typically results from deforestation, drought, or inappropriate agricultural practices. </p>
 <p>Comparing a <a href="https://en.wikipedia.org/wiki/Desertification#/media/File:Desertification_map.png">map of global desertification vulnerability</a> with a <a href="https://ourworldindata.org/explorers/countries-in-conflict-data?facet=none&amp;Measure=Conflict+deaths&amp;Conflict+type=All+armed+conflicts&amp;Conflict+sub-type=Across+all+sub-types&amp;country=AFG~ETH~SYR~UKR">map of armed conflicts</a> hints at something. What?</p>
 		<p><strong>Connections:</strong></p><ul>
 			<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - The forming of deserts in previously arable land unfortunately accelerates the very factors that cause the desertification in the first place.</li>
@@ -24,7 +24,6 @@
 <br>
 <br>
 <br>
-
 		</ul>
 </body>
 </html>
