--- a/predicaments/Loss of insect biomass.html
+++ b/predicaments/Loss of insect biomass.html
@@ -16,25 +16,22 @@
 <p>We urgently need an end to these false assurances, to the sugar coating of unpalatable facts. It is the public that is being asked to assume the risks that the insect controllers calculate. The public must decide whether it wishes to continue on the present road, and it can do so only when in full possession of the facts.</p>
 <cite>Rachel Carson, Silent Spring</cite>
 </blockquote><p><strong>Connections:</strong></p><ul>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Biodiversity loss" href="../Biodiversity loss.html">Biodiversity loss</a></li>
-<li><a data-href="Climate change" href="../Climate change.html">Climate change</a></li>
-<li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Monocultures (agriculture)" href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Lack of systems thinking" href="../Lack of systems thinking.html">Lack of systems thinking</a></li>
-<li><a data-href="Unheeded warnings" href="../Unheeded warnings.html">Unheeded warnings</a></li>
-<li><a data-href="Genetic modification" href="../Genetic modification.html">Genetic modification</a></li>
-<li><a data-href="Ignoring complexity" href="../Ignoring complexity.html">Ignoring complexity</a></li>
-<li><a data-href="Ignoring diversity" href="../Ignoring diversity.html">Ignoring diversity</a></li>
-<li><a data-href="The minimisation of all things wild" href="../The minimisation of all things wild.html">The minimisation of all things wild</a></li>
-<li><a data-href="Delusional domination of nature" href="../Delusional domination of nature.html">Delusional domination of nature</a></li>
-<li><a data-href="Ignorance of interconnectedness" href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
-<li><a data-href="Animal views" href="../Animal views.html">Animal views</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - Things might happen quite quickly if the droning hum of spring flowers is no longer accompanied by buzzing of bees.</li>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - No pollination, no food. Mostly.</li>
+	<li><strong><a href="../Biased evidence selection.html">Biased evidence selection</a></strong> - Well, actually, where I live there seem to be a lot of mosquitoes nowadays. What do you say to that, huh?</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Insects make up an enormous part of the species of the planet and support most other species.</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - It might sound like an exaggeration but if we suddenly lack the necessary amount of pollinators to keep our food production up we are well and truly fucked.</li>
+	<li><strong><a href="../Complexity mismatch.html">Complexity mismatch</a></strong> - Without a reduction of insects we have a heavily reduced natural complexity.</li>
+	<li><strong><a href="../Delusional domination of nature.html">Delusional domination of nature</a></strong> - Well, I mean... To be fair, we appear to be quite good at developing working insecticides. Go humans.</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Insect loss is a massive part of the global ecological crisis.</li>
+	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - Even if we halted insect loss today there would most likely need to be active initiatives to restabilise and reintroduce insect populations.</li>
+	<li><strong><a href="../Ignoring diversity.html">Ignoring diversity</a></strong> - Those who claim we aren't actually reducing the total amount of insects seem to be in a rut of quantification where a million honey bees are equal to a million different bee species. Diversity matters. More honey bees are not the solution.</li>
+	<li><strong><a href="../Naive techno-optimism.html">Naive techno-optimism</a></strong> - Maybe we can just replace insects with tiny drones or something? Oh, <a href="https://wyss.harvard.edu/technology/robobees-autonomous-flying-microrobots/">great...</a> I swear, we'll invent mosquitobots to make it feel like we're really in nature before we do anything about insect loss.</li>
+	<li><strong><a href="../Over-reliance on technology.html">Over-reliance on technology</a></strong> - The more we lose of the natural systems aiding in activities like food production the more reliant we become on high-tech solutions to "save" us, or at least kick the bucket further down the road.</li>
+	<li><strong><a href="../The minimisation of all things wild.html">The minimisation of all things wild</a></strong> - Most wild places are filled with crawling, buzzing, and flying.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - How long until insect populations collapse completely? And what follows from such a collapse?</li>
+	<br>
+	<br>
+	<br>
+</ul>
+</html>
