Change order of introduction

--- a/predicaments/Pollution.html
+++ b/predicaments/Pollution.html
@@ -7,7 +7,7 @@
 			<h2>Pollution</h2>
 			<img src="../img/pollution_sunset.png" width="100%">
 			<blockquote>
-				Like a man who has been dying for many days, a man in your city is numb to the stench.
+				<p>Like a man who has been dying for many days, a man in your city is numb to the stench.</p>
 				<cite>Chief Si'ahl</cite>
 			</blockquote>
 			<p><strong>Pollution is the introduction of contaminants into the natural environment that cause adverse change</strong>. It comes not only in the form of chemicals but rather it can be almost anything. Air pollution, electromagnetic, light, litter, noise, chemical, radioactive, visual, thermal, medial, water, material, mental, physical, etc. We live in an increasingly polluted world where <a href="https://pubs.acs.org/doi/10.1021/acs.est.2c02592">no place is left clean</a>.</p>
