Add some links and other stuff

--- a/predicaments/Ecological crisis.html
+++ b/predicaments/Ecological crisis.html
@@ -5,36 +5,70 @@
 <base target="_top">
 			</head>
 			<h2>Ecological crisis</h2>
+			<blockquote>
+				<p>
+					Once you learn to read the land, I have no fear of what you will do to it, or with it. And I know many pleasant things it will do to you.
+				<cite>Aldo Leopold</cite>
+				</p>
+			</blockquote>
 			<p>Ecology is the <a href="https://www.etymonline.com/word/ecology">study of our dwelling place</a>, more specifically a field of science studying the interconnected systems of Earth. </p>
 <p><strong>The ecological crisis is a destabilisation or breakdown of these systems large enough to threaten humanity&#39;s continued survival</strong>. It is, however, important to include other organisms in this since the ongoing man-made ecological crises are causing the extinction of multiple species every day. From a systems-thinking perspective every species going extinct reduces an ecosystem&#39;s options to restabilise after a destabilising event. It is therefore not unlikely that we end up snowballing the effects of climate change by reducing the resilience and complexity of ecosystems past the point where a recovery is possible.</p>
 <p><strong>Connections:</strong></p><ul>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
-	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - BLABLA</li>
+	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - The ecological crisis is accelerating and further accelerates many other predicaments towards the precipice.</li>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - We live off of the benevolence of a functioning global being.</li>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - When ecosystems collapse, springs dry up and rivers stop singing.</li>
+	<li><strong><a href="../Apathy.html">Apathy</a></strong> - It is difficult to truly care about something so immense. Try to initially care about whatever tiny patch of life your heart might skip a beat for.</li>
+	<li><strong><a href="../Avoiding radical options.html">Avoiding radical options</a></strong> - It appears to be too radical to focus on making sure our planet keeps supporting life.</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - Ecological collapse and species extinction go hand in hand.</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - The ecological crisis is without a doubt a catastrophic risk.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - The relationship between climate change and ecological crisis is recursive, they create and worsen each other.</li>
+	<li><strong><a href="../Dealing with death.html">Dealing with death</a></strong> - How do we stop and acknowledge the life already lost? Maybe the question makes no sense. Would a murderer grieve between his stabbings?</li>
+	<li><strong><a href="../Debt.html">Debt</a></strong> - The debt we've accumulated through our Earth-destroying practices will be passed down through many generations. If we're lucky.</li>
+	<li><strong><a href="../Delusional domination of nature.html">Delusional domination of nature</a></strong> - The lacerations on our backs are from our own whips.</li>
+	<li><strong><a href="../Desertification.html">Desertification</a></strong> - Already weakened ecosystems are more vulnerable to the choking sand dunes stretching all around the horizon.</li>
+	<li><strong><a href="../Emotional crisis.html">Emotional crisis</a></strong> - How do we respond emotionally to the destruction of our home? How do we allow space for the emotions while avoiding despair?</li>
+	<li><strong><a href="../End of history.html">End of history</a></strong> - No Gaia, no civilisation. No civilisation, no history.</li>
+	<li><strong><a href="../Extreme weather.html">Extreme weather</a></strong> - The more ecosystems degrade, the more likely we are to see spirits go out not with a whimper but with a bang.</li>
+	<li><strong><a href="../Failure to take responsibility.html">Failure to take responsibility</a></strong> - There is no escaping the fact that humans have the power to end all life on Earth. We must learn how to take responsibility, become stewards, control and tame this power.</li>
+	<li><strong><a href="../Fear.html">Fear</a></strong> - Ecological collapse incites fear. It should. We mustn't become paralysed by this fear. If your house is on fire you must get the ones you love to safety and extinguish the flames. The response required is beyond fight, flight, or freeze.</li>
+	<li><strong><a href="../Finite games.html">Finite games</a></strong> - Push the Earth far enough in the wrong direction and the game is over.</li>
+	<li><strong><a href="../Genetic modification.html">Genetic modification</a></strong> - Don't worry, if all species die we can simply create new ones. It'll be awesome.</li>
+	<li><strong><a href="../Genocide.html">Genocide</a></strong> - People are dying as a result of our ecological crisis. At the same time, we are mostly aware of what actions directly create ecological crises. Awareness of the direct actions we're taking that leads to people dying. Yeah, that's something akin to genocide. Anthropocide?</li>
+	<li><strong><a href="../Greed.html">Greed</a></strong> - The less remains, the more I will fight so that I am the one who gets it.</li>
+	<li><strong><a href="../Greenwashing.html">Greenwashing</a></strong> - The global financial systems will make business opportunities of all available crises.</li>
+	<li><strong><a href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></strong> - As long as the ecosystems that collapse are somewhere else we're all good. No? One does wonder if anything would change if business and world leaders were forced to live where the collapse was most evident. Then again, most of them currently live in the company of each other on the golf court and I might rather dry into a prune in the desert than play golf with old white men with prunish tans.</li>
+	<li><strong><a href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></strong> - There are no boundaries when it comes to ecosystems. Everything is affected and affected by everything else.</li>
+	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - We often see ecological collapse as an event ahead of us. It started long ago and is intensively ongoing.</li>
+	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - The cost of ecologically related externalities is already more than we can ever include but the more obvious this becomes the more skilled businesses will have to be about ignoring them.</li>
+	<li><strong><a href="../Immoral justifications.html">Immoral justifications</a></strong> - As the ecological crisis becomes ever more obvious, our justifications for our ways of life become ever more immoral.</li>
+	<li><strong><a href="../Industrial slaughter.html">Industrial slaughter</a></strong> - Systematic killing of other sentient beings, when explicit, takes the form of slaughterhouses. When implicit it takes the form of global ecological collapse.</li>
+	<li><strong><a href="../Inequality.html">Inequality</a></strong> - A global ecological crisis will not affect all beings equally. At least not at first.</li>
+	<li><strong><a href="../Lack of a living world view.html">Lack of a living world view</a></strong> - If we're killing the world it'll be harder to justify the claim that it's alive. In fact, quite a lot harder.</li>
+	<li><strong><a href="../Lack of balance.html">Lack of balance</a></strong> - In a way, the ecological crisis is one big unbalancing event.</li>
+	<li><strong><a href="../Lack of humility.html">Lack of humility</a></strong> - We haven't yet realised, it seems, that despite our alleged power over nature, we are so ridiculously tiny.</li>
+	<li><strong><a href="../Lack of resilient systems.html">Lack of resilient systems</a></strong> - The complexity of certain ecosystems show a resilience beyond any anthropogenic systems. What took a long time to form, however, is now collapsing rapidly. The more of these systems we lose, the less resilience the global systems have.</li>
+	<li><strong><a href="../Lack of the longterm.html">Lack of the longterm</a></strong> - Without functioning ecosystems there isn't any longterm to envision.</li>
+	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - How can we not see that time is up?</li>
+	<li><strong><a href="../Limits to growth.html">Limits to growth</a></strong> - The ecological crisis worldwide is a clear sign that one cannot grow indefinitely.</li>
+	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - The loss of insects and the collapse of ecosystems go together.</li>
+	<li><strong><a href="../Malnutrition.html">Malnutrition</a></strong> - What kills us with the ecological crisis might in the end be starvation.</li>
+	<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - As the global ecological collapse makes itself evident locally there will be massive migrations to the pockets of greenery still alive.</li>
+	<li><strong><a href="../Material extraction.html">Material extraction</a></strong> - As long as the prevailing systems control us we must increase material extraction while we still can to be on top when we suddenly can't. Or something along those lines...</li>
+	<li><strong><a href="../Meaning crisis.html">Meaning crisis</a></strong> - How does one find meaning when one feels like the world is dying?</li>
+	<li><strong><a href="../Mental health.html">Mental health</a></strong> - As the roof collapses under the flames the therapist tries to focus on the patient splayed on a chaise long starring absentmindedly at the starless sky, their face vibrant with the light of flame. "I'm not sure what it is but I keep having this OCD-ish need to wash my hands..."</li>
+	<li><strong><a href="../Migration.html">Migration</a></strong> - People will flock towards the few places still supporting life.</li>
+	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Total extinction of all life is quite clearly mistreatment.</li>
+	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - Same as the above.</li>
+	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Music to Moloch's ears.</li>
+	<li><strong><a href="../Naive progress narrative.html">Naive progress narrative</a></strong> - Ongoing ecological collapse is one of the main thorns in the progress narrative and is what makes it truly naive.</li>
+	<li><strong><a href="../Pandemics.html">Pandemics</a></strong> - As ecosystems collapse, humans will not be the only beings trying to scramble for dominance.</li>
+	<li><strong><a href="../Poverty.html">Poverty</a></strong> - We might literally lose everything we ever had or ever could have.</li>
+	<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - The ecological crisis will drive resource conflicts as the drowning economy flails wildly.</li>
+	<li><strong><a href="../Solutionism.html">Solutionism</a></strong> - Each fruit springing out of the sick tree is deformed in a different way and we desperately cling to how to fix each fruit while the tree is allowed to rot away.</li>
+	<li><strong><a href="../Spiritual metacrisis.html">Spiritual metacrisis</a></strong> - Where do our souls and the souls of our ancestors go if the Earth splits open and darkness reigns?</li>
+	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - There is much beauty left but much is being desacrated each second.</li>
+	<li><strong><a href="../The minimisation of all things wild.html">The minimisation of all things wild</a></strong> - Ecological crisis is the collapse of the wild.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - We might already have reached ecological tippings points.</li>
 <br>
 <br>
 <br>
