--- a/predicaments/The Predicament Landscape.html
+++ b/predicaments/The Predicament Landscape.html
@@ -35,6 +35,9 @@ Discovering this landscape might lead to a sense of impending doom, hopelessness
 
 <img src="../img/kingcrown.png" width="100%"><br>
 
+<p><strong>How to read this</strong><br>
+Reading this may require certain skills and abilities we've largely let atrophy. If I was to pick one thing needed to read this properly it would be <em>acceptance of confusion</em>. Let yourself be confused for longer than you're inclined to. Let me illustrate what I mean with a quick example. If you're reading a book where words unknown to you keep popping up you might stop at each word, look it up in a dictionary, and continue reading. That approach will not work particularly well in this case. The alternative is to simply keep reading and instead of letting the text linearly create a path you must allow the drawing out of a patchy line and trust that the process will eventually lead to the line being filled out. Float through sections you don't understand, trudge through sections that confuse you, push through or temporarily skip sections that generate resistance and frustration. If you've ever thought that koans are bullshit I implore you to explore it further and reconsider. If and when this writing creates confusion, contradiction, or incites strong emotion, I believe that is when things get interesting and fertile for change.</p>
+
 <p><strong>The Predicaments</strong><ol>
     <li data-line="0"><a data-href="Acceleration" href="../Acceleration.html">Acceleration</a></li>
     <li data-line="1"><a data-href="Access to food" href="../Access to food.html">Access to food</a></li>
